--- a/css/style.css
+++ b/css/style.css
@@ -16,29 +16,99 @@
 
   button {
     cursor: pointer;
+    width: 100%;
   }
-
-  input {
-    margin: 2rem;
-  }
-
    
   button, input {
     border: none;
     background: none;
     outline: none;
-    color: var(--darkred);
   }
   
   body {
-    text-align: center;
     font: 1rem/1.3 "Roboto", sans-serif;
     background: var(--bg_main);
     color: var(--text_dark);
     padding: 50px;
   }
 
-  .heading {
-    padding: 2rem 0;
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  form {
+    flex-direction: column;
+  }
+
+  .top-banner {
     color: var(--text_light);
+  }
+  .heading {
+    font-weight: bold;
+    font-size: 4rem;
+    letter-spacing: 0.02em;
+    padding: 0 0 30px 0;
+  }
+  .top-banner form {
+    position: relative;
+    display: flex;
+    align-items: center;
+  }
+  .top-banner form input {
+    font-size: 2rem;
+    height: 40px;
+    padding: 5px 5px 10px;
+    border-bottom: 1px solid;
+    color: var(--text_light);
+  }
+  .top-banner form input::placeholder {
+    color: var(--text_light); 
+  }
+  .top-banner form button {
+    font-size: 1rem;
+    font-weight: bold;
+    letter-spacing: 0.1em;
+    padding: 15px 20px;
+    margin-left: 15px;
+    border-radius: 5px;
+    color: var(--text_light); 
+    background: var(--red);
+    transition: background 0.3s ease-in-out;
+  }
+
+  button {
+    margin-top: 2rem;
+  }
+
+  .top-banner form button:hover {
+    background: var(--darkred);
+  }
+  .top-banner form .msg {
+    position: absolute;
+    bottom: -40px;
+    left: 0;
+    max-width: 450px;
+    min-height: 40px;
+  }
+  @media screen and (max-width: 700px) {
+    .top-banner form {
+      flex-direction: column;
+    }
+    
+    .top-banner form input,
+    .top-banner form button {
+      width: 100%;
+    }
+    .top-banner form button {
+      margin: 20px 0 0 0;
+    }
+    
+    .top-banner form .msg {
+      position: static;
+      max-width: none;
+      min-height: 0;
+      margin-top: 10px;
+    }
   }
