--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,16 @@
     font-weight: normal;
   }
 
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
+.material-symbols-outlined {
+  margin: 0 5px;
+}
   button {
     cursor: pointer;
     width: 100%;
@@ -94,17 +104,23 @@
   }
 
   .ajax-section {
+    display: flex;
     width: 400px;
     height: 300px;
     border-radius: 10px;
     background-color: white;
-    text-align: center;
     list-style: none;
     line-height: 2rem;
-    padding: 50px;
     margin: 20px auto;
+    padding: 60px;
     overflow: hidden;
     transition: transform 0.3s ease-in-out;
+  }
+
+  li {
+    display: flex;
+    align-items: center;
+    align-content: center;
   }
   .ajax-section:hover {
     transform: translateY(-10px);
