--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,31 @@
       min-height: 0;
       margin-top: 10px;
     }
+
+    .ajax-section {
+      display: flex;
+      width: 200px;
+      height: 200px;
+      border-radius: 10px;
+      background-color: white;
+      list-style: none;
+      line-height: 2rem;
+      margin: 20px auto;
+      padding: 10px;
+      overflow: hidden;
+      transition: transform 0.3s ease-in-out;
+    }
+  
+    li {
+      display: flex;
+      align-items: center;
+      align-content: center;
+    }
+    .ajax-section:hover {
+      transform: translateY(-10px);
+      box-shadow: 0px 10px 20px rgba(0,0,0,0.3);
+    }
+  
   }
 
  
